--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     }
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "vite-tsconfig-paths": "^4.2.0"
   },
