--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     }
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.5.1",
+    "classnames": "^2.3.2",
+    "immer": "^10.0.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "vite-tsconfig-paths": "^4.2.0"
+    "vite-tsconfig-paths": "^4.2.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -35,7 +36,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "git-cz": "^4.9.0",
-    "sass": "^1.62.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
