--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "antd": "^5.5.1",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "immer": "^10.0.2",
     "path": "^0.12.7",
